# pdfAttachmentDemo

./: CMakeLists.txt  README.md  default.tm  xmake.lua
lib/cmake/PDFHummus/: PDFHummusConfig.cmake  PDFHummusConfigVersion.cmake  PDFHummusTargets-noconfig.cmake  PDFHummusTargets.cmake
src/: MakingAttachment.cpp  PDFAttachment.cpp  PDFAttachment.h  PDFAttachmentWriter.cpp  PDFAttachmentWriter.h  main.cpp  pdf_hummus_make_attachment.cpp  pdf_hummus_make_attachment.hpp
